[gd_scene load_steps=2 format=3 uid="uid://p26p8upa05vb"]

[ext_resource type="Script" path="res://Items/inv.gd" id="1_kbsux"]

[node name="Inv" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kbsux")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 740.0
offset_top = 895.0
offset_right = 780.0
offset_bottom = 935.0
scale = Vector2(0.842435, 0.798838)

[node name="GridContainer" type="GridContainer" parent="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = -878.406
offset_top = -1120.38
offset_right = -738.406
offset_bottom = -1080.38
scale = Vector2(3.56466, 3.38012)
columns = 4

[node name="PanelContainer1" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer1"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer2" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer2"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer3" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer3"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer4" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer4"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer5" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer5"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer6" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer6"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer7" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer7"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[node name="PanelContainer8" type="Button" parent="Control/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="SlotImage" type="TextureRect" parent="Control/GridContainer/PanelContainer8"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0

[connection signal="pressed" from="Control/GridContainer/PanelContainer1" to="." method="_on_panel_container_1_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer2" to="." method="_on_panel_container_2_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer3" to="." method="_on_panel_container_3_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer4" to="." method="_on_panel_container_4_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer5" to="." method="_on_panel_container_5_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer6" to="." method="_on_panel_container_6_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer7" to="." method="_on_panel_container_7_pressed"]
[connection signal="pressed" from="Control/GridContainer/PanelContainer8" to="." method="_on_panel_container_8_pressed"]
